log
Tue 26 Mar 2024 06:54:49 PM UTC: 
 tests:  0|6
total_score: 0/70
6e71058
Thu 28 Mar 2024 08:03:31 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e77c1ad
Thu 28 Mar 2024 08:10:26 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cececad
